# ansible-role-tripleo-rsyslog-sidecar

./: .gitreview  README.md  ansible.cfg  setup.cfg
meta/: main.yml
